refactor: 全系统数据访问反模式消除与客户列表服务端分页
- CRM/财务/治理/采购/办公：findAll 全表扫描 + Java 流聚合改为 SQL SUM/GROUP BY
- 数据范围过滤下推 SQL，消除 N+1 查询
- 客户列表新增服务端分页 /page、汇总 /summary 与服务端搜索
- 客户池前端切服务端分页 + 汇总 + 服务端搜索，CSV 导出改服务端全量
- 采购询价定标与预算占用改为定向查询
- 治理/财务聚合口径收敛到仓库 SQL 聚合
- 办公自动编号补充 Expense/Outsource/Approval 兜底
- 文档补充单租户与解析器说明